k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postech-fase2
  labels:
    name: postech-fase2
